package ca.mcmaster.se2aa4.island.team222;

public class Coordinate {

    // x is positive right
    // y is positive up

    private int x;
    private int y;

    public Coordinate(int x, int y){
        this.x = x;
        this.y = y;
    }

    public int getX(){
        return this.x;
    }

    public int getY(){
        return this.y;
    }

    public void updateX(int x){
        this.x += x;
    }

    public void updateY(int y){
        this.y += y;
    }

    public void updateXandY(int x, int y){
        updateX(x);
        updateY(y);
    }
}