package ca.mcmaster.se2aa4.island.team222.pois;

public enum POIType {
    CREEK,SITE,BIOME;

}
